<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SS IME</string>
    <string name="ime_name">PHIDI IME</string>
    <string name="ime_settings_activity_name">SS IME Settings</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards. -->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting">Settings</string>
    <string name="setting_sound_key_title">Sound Key</string>
    <string name="setting_vibrate_title">Vibrate</string>
    <string name="setting_prediction_title">Prediction</string>
    <string name="setting_switch_title">Switch Setting</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_enabled">Enabled</string>
    <string name="setting_disabled">Disabled</string>
    <string name="setting_others">Others</string>
    <string name="setting_others_summary">Other settings</string>
    <string name="action_settings"></string>
    <string name="extract_edit_menu_button">OK</string>

    <string name="text_EN">EN</string>
    <string name="text_CN">CN</string>
    <string name="text_Pause">Pause</string>
    <string name="text_Wait">Wait</string>
    <string name="text_go">GoTo</string>
    <string name="text_send">Send</string>
    <string name="text_next">Next</string>
    <string name="text_finish">Done</string>
</resources>
