<?xml version="1.0" encoding="UTF-8"?><!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<keyboard
    balloon="true"
    height="20%p"
    key_type="6"
    repeat="false"
    skb_cache_flag="true"
    skb_template="@xml/skb_template1"
    width="10%p">
    <row width="9.9%p">
        <key label="[">
            <toggle_state
                label="【"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="]">
            <toggle_state
                label="】"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="{">
            <toggle_state
                label="｛"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="}">
            <toggle_state
                label="｝"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="\#">
            <toggle_state
                label="\#"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="%">
            <toggle_state
                label="%"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="^">
            <toggle_state
                label="…"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="*">
            <toggle_state
                label="*"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="+">
            <toggle_state
                label="+"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="=">
            <toggle_state
                label="="
                state_id="@string/toggle_en_sym2" />
        </key>
    </row>

    <row
        start_pos_x="5%p"
        start_pos_y="20%p">


        <key label="_">
            <toggle_state
                label="-"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="\\">
            <toggle_state
                label="—"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="|">
            <toggle_state
                label="、"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="~">
            <toggle_state
                label="|"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="&lt;">
            <toggle_state
                label="~"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="&gt;">
            <toggle_state
                label="《"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="€">
            <toggle_state
                label="》"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="£">
            <toggle_state
                label="&amp;"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="$">
            <toggle_state
                label="￥"
                state_id="@string/toggle_en_sym2" />
        </key>
    </row>

    <row
        start_pos_x="8%p"
        start_pos_y="40%p">
        <key
            balloon="false"
            code="-7"
            key_type="6"
            label="123"
            start_pos_x="14%p"
            start_pos_y="65%p"
            width="16%p"></key>

        <key label=".">
            <toggle_state
                label="，"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label=",">
            <toggle_state
                label="。"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="\?">
            <toggle_state
                label="？"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="!">
            <toggle_state
                label="！"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="'">
            <toggle_state
                label="‘"
                state_id="@string/toggle_en_sym2" />
        </key>
        <key label="\@">
            <toggle_state
                label="’"
                state_id="@string/toggle_en_sym2" />
        </key>

        <key
            balloon="false"
            id="3" />
    </row>


    <row
        height="15%p"
        start_pos_x="18%p"
        start_pos_y="65%p">
        <key
            balloon="false"
            code="-2"
            key_type="6"
            label="@string/text_CN"
            repeat="true"
            start_pos_x="18%p"
            start_pos_y="65%p"
            width="8%p">
            <toggle_state
                code="-2"
                label="@string/text_EN"
                state_id="@string/toggle_en_sym2" />
        </key>

        <key
            balloon="false"
            id="5" />
        <key
            balloon="false"
            id="8" />
        <key id="2" />
    </row>
</keyboard>

